succesfully bundling with spack

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>{{name}}</title>
   <link rel="stylesheet" href="/assets/css/main.css"/>
 </head>
+
 <body>
   <h1>welcome to {{name}}</h1>
   <p> this is my personal website hi </p>
   <img src="/assets/images/me.png" alt="moi" />
-  <script src="/assets/js/main.js"></script>
+
+  <!-- scripts -->
+  <script src="/dist/bundle.js"></script>
 </body>
+
 </html>
