redirect dist generated files to the static assets folder

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>{{name}}</title>
-  <link rel="stylesheet" href="/dist/css/main.css"/>
+  <link rel="stylesheet" href="/assets/css/main.css"/>
 </head>
 
 <body>
@@ -12,7 +12,7 @@
   <img src="/assets/images/me.png" alt="moi" />
 
   <!-- scripts -->
-  <script src="/dist/js/bundle.js"></script>
+  <script src="/assets/js/bundle.js"></script>
 </body>
 
 </html>
