--- a/web/scss/elements/page.scss
+++ b/web/scss/elements/page.scss
@@ -1,5 +1,8 @@
-body, html {
-  height: 100%;
+body {
   margin: 0;
-  padding: 2vw;
+}
+
+html, body, #terminal {
+  width: 100%;
+  height: 100%;
 }
