--- a/web/scss/elements/page.scss
+++ b/web/scss/elements/page.scss
@@ -2,7 +2,11 @@ body {
   margin: 0;
 }
 
+html {
+  background-color: black;
+}
+
 html, body, #terminal {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
