--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -4,21 +4,57 @@
 <head>
   <title>{{name}}</title>
   <!-- stylesheets -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.css" integrity="sha512-iLYuqv+v/P4u9erpk+KM83Ioe/l7SEmr7wB6g+Kg1qmEit8EShDKnKtLHlv2QXUp7GGJhmqDI+1PhJYLTsfb8w==" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.9.0/css/xterm.css" integrity="sha256-QIY4PCy8QFMjISW7DEmeaROMHswpbJfnbLPUH3/GHxw=" crossorigin="anonymous">
   <link rel="stylesheet" href="/assets/css/main.css"/>
 
-  <!-- imported xterm scripts-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.js" integrity="sha512-2PRgAav8Os8vLcOAh1gSaDoNLe1fAyq8/G3QSdyjFFD+OqNjLeHE/8q4+S4MEZgPsuo+itHopj+hJvqS8XUQ8A==" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.min.js" integrity="sha512-43J76SR5UijcuJTzs73z8NpkyWon8a8EoV+dX6obqXW7O26Yb268H2vP6EiJjD7sWXqxS3G/YOqPyyLF9fmqgA==" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/terminado/terminado.min.js" integrity="sha512-TtKncBxqCuka3yQ40VKwx1Jm3cfx1JyWCbRjAFIu7gQ+pvi8b4RwDIbTfmckBi2hpTSdIxxIN2nn23U6tcoboQ==" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/fit/fit.min.js" integrity="sha512-+wh8VA1djpWk3Dj9/IJDu6Ufi4vVQ0zxLv9Vmfo70AbmYFJm0z3NLnV98vdRKBdPDV4Kwpi7EZdr8mDY9L8JIA==" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/search/search.min.js" integrity="sha512-OkVnWNhmCMHw8pYndhQ+yEMJzD1VrgqF12deRfRcqR6iWL4s8IkxTBwSrJZ2WgpevhD71S68dAqBPHv/VHGDAw==" crossorigin="anonymous"></script>
+  <!-- xterm 4.9.0 imports -->
+  <!-- xterm -->
+  <script src="https://cdn.jsdelivr.net/npm/xterm@4.9.0/lib/xterm.min.js"></script>
+  <!-- xterm-addon-fit -->
+  <script src="https://cdn.jsdelivr.net/npm/xterm-addon-fit@0.4.0/lib/xterm-addon-fit.min.js"></script>
+  <!-- xterm-addon-attach -->
+  <script src="https://cdn.jsdelivr.net/npm/xterm-addon-attach@0.6.0/lib/xterm-addon-attach.min.js"></script>
+  <!-- xterm-addon-web-links -->
+  <script src="https://cdn.jsdelivr.net/npm/xterm-addon-web-links@0.4.0/lib/xterm-addon-web-links.min.js"></script>
+  <!-- xterm-addon-serialize -->
+  <script src="https://cdn.jsdelivr.net/npm/xterm-addon-serialize@0.4.0/lib/xterm-addon-serialize.min.js"></script>
+  <!-- xterm-addon-search -->
+  <script src="https://cdn.jsdelivr.net/npm/xterm-addon-search@0.7.0/lib/xterm-addon-search.min.js"></script>
 </head>
 
 <body>
   <div id="terminal"></div>
   <!-- scripts -->
-  <script src="/assets/js/bundle.js"></script>
+  <script>
+    const xtermOptions = {
+      cursorBlink: true,
+      fontSize: 12,
+      cursorWidth: 8,
+      rightClickSelectsWord: true,
+      scrollback: 0,
+    }
+
+    const pterm = new Terminal(xtermOptions);
+
+    // addons
+    const fitAddon = new FitAddon.FitAddon();
+    const webLinksAddon = new WebLinksAddon.WebLinksAddon();
+    const searchAddon = new SearchAddon.SearchAddon();
+    const serializeAddon = new SerializeAddon.SerializeAddon();
+    // const attachAddon = new AttachAddon.AttachAddon();
+
+    pterm.loadAddon(fitAddon);
+    pterm.loadAddon(webLinksAddon);
+    pterm.loadAddon(searchAddon);
+    pterm.loadAddon(serializeAddon);
+
+    pterm.open(document.getElementById("terminal"));
+
+    fitAddon.fit();
+
+    window.pterm = pterm;
+  </script>
+  <!-- <script src="/assets/js/bundle.js"></script> -->
 </body>
 
 </html>
