preload info logs

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -54,15 +54,18 @@
 
     window.pterm = pterm;
   </script>
-  <script type="module">
-    import init from "pterm";
+  <script src="/assets/js/bundle.js"></script>
+  <!-- <script type="module">
+    import init from "./pkg/pterm";
+
+    console.log("init: ", init);
     
     async function run() {
       await init();
     }
 
     run();
-  </script>
+  </script> -->
 </body>
 
 </html>
