--- a/web/scss/elements/page.scss
+++ b/web/scss/elements/page.scss
@@ -6,7 +6,17 @@ html {
   background-color: black;
 }
 
-html, body, #terminal {
+html, body {
   width: 100vw;
   height: 100vh;
+}
+
+#intro-terminal {
+  width: 100vw;
+  height: 50vh !important;
+}
+
+#terminal {
+  width: 100vw;
+  height: 50vh !important;
 }
