--- a/web/scss/elements/page.scss
+++ b/web/scss/elements/page.scss
@@ -18,5 +18,13 @@ html, body {
 
 #terminal {
   width: 100vw;
-  height: 50vh !important;
+  height: 0;
 }
+
+// .full-height {
+//   height: 100vh !important;
+// }
+
+// .hidden {
+//   display: none !important;
+// }
