--- a/static/templates/about.html
+++ b/static/templates/about.html
@@ -4,16 +4,92 @@
 <head>
   <title>{{name}}</title>
   <!-- stylesheets -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.9.0/css/xterm.css" integrity="sha256-QIY4PCy8QFMjISW7DEmeaROMHswpbJfnbLPUH3/GHxw=" crossorigin="anonymous">
   <link rel="stylesheet" href="/assets/css/main.css"/>
+
+  <!-- xterm 4.9.0 imports -->
+  <!-- xterm -->
+  <script src="https://cdn.jsdelivr.net/npm/xterm@4.9.0/lib/xterm.min.js"></script>
+  <!-- xterm-addon-fit -->
+  <script src="https://cdn.jsdelivr.net/npm/xterm-addon-fit@0.4.0/lib/xterm-addon-fit.min.js"></script>
+  <!-- xterm-addon-attach -->
+  <script src="https://cdn.jsdelivr.net/npm/xterm-addon-attach@0.6.0/lib/xterm-addon-attach.min.js"></script>
+  <!-- xterm-addon-web-links -->
+  <script src="https://cdn.jsdelivr.net/npm/xterm-addon-web-links@0.4.0/lib/xterm-addon-web-links.min.js"></script>
+  <!-- xterm-addon-serialize -->
+  <script src="https://cdn.jsdelivr.net/npm/xterm-addon-serialize@0.4.0/lib/xterm-addon-serialize.min.js"></script>
+  <!-- xterm-addon-search -->
+  <script src="https://cdn.jsdelivr.net/npm/xterm-addon-search@0.7.0/lib/xterm-addon-search.min.js"></script>
 </head>
 
 <body>
-  <h1>about me</h1>
-  <p> this is my personal website hi </p>
-  <img src="/assets/images/me.png" alt="moi" />
+  <div class="main">
+    <div id="about">
+      <img src="/assets/images/me.png" alt="moi" />
+      <p> 
+        this is my personal website hi 
+
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <h1>about me</h1>
+    </div>
+    <div id="about-term"></div>
+  </div>
 
   <!-- scripts -->
-  <script src="/assets/js/bundle.js"></script>
+  <script>
+    const xtermOptions = {
+      cursorBlink: true,
+      fontSize: 12,
+      cursorWidth: 8,
+      rightClickSelectsWord: true,
+      scrollback: 0,
+    }
+
+    const pterm = new Terminal(xtermOptions);
+
+    const fitAddon = new FitAddon.FitAddon();
+    const webLinksAddon = new WebLinksAddon.WebLinksAddon();
+    const searchAddon = new SearchAddon.SearchAddon();
+    const serializeAddon = new SerializeAddon.SerializeAddon();
+
+    pterm.loadAddon(fitAddon);
+    pterm.loadAddon(webLinksAddon);
+    pterm.loadAddon(searchAddon);
+    pterm.loadAddon(serializeAddon);
+
+    pterm.open(document.getElementById("about-term"));
+    fitAddon.fit();
+
+    window.pterm = pterm;
+    window.pterm.writeln("");
+    window.pterm.writeln("[COMMANDS]:");
+    window.pterm.writeln("");
+    window.pterm.writeln("home:           go back to homepage");
+    window.pterm.writeln("");
+    window.pterm.write("kathleenfrench@portfolio $ ");
+
+    var line = "";
+    window.pterm.onKey(e => {
+      // on enter key
+      if (e.domEvent.keyCode == 13) {
+        console.log("line: ", line);
+        if (line == "home") {
+          window.location.href = "/";
+        } else {
+          line = "";
+          window.pterm.writeln(line);
+          window.pterm.write("kathleenfrench@portfolio $ ");
+        }
+      } else {
+        line += e.key.trim();
+        window.pterm.write(e.key);
+        return;
+      }
+    });
+
+    console.log("line: ", line);
+  </script>
 </body>
 
 </html>
