--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -23,8 +23,31 @@
 </head>
 
 <body>
+
+<!-- CONTENT -->
+<div class="main">
+
+  <!-- ABOUT SECTION -->
+  <div class="hidden" id="about">
+    <img src="/assets/images/me.png" alt="moi" />
+    <p> 
+      this is my personal website hi 
+
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <h1>about me</h1>
+  </div>
+
+
+  <!-- ANIMATIONS -->
   <div id="intro-terminal"></div>
+
+  <!-- MAIN TERMINAL -->
   <div id="terminal"></div>
+
+
+  </div>
+
   <!-- scripts -->
   <script>
     const xtermOptions = {
