--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -42,9 +42,7 @@
       </div>
       <div class="flex-container">
         <p> 
-          this is my personal website hi 
-  
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          kathleen french is a writer and software engineer @ vimeo living in brooklyn. she received her b.a. in english from harvard and her m.f.a. in fiction from nyu. she has a boston terrier named george.
         </p>
       </div>
       <div class="flex-container">
