--- a/static/css/main.css
+++ b/static/css/main.css
@@ -97,3 +97,78 @@ img {
   max-width: 300px;
   height: auto;
 }
+
+#treasure {
+  background-image: url("/assets/images/treasure.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  overflow: hidden;
+  background-position-y: bottom;
+}
+
+.treasure-chest h2 {
+  float: left;
+  margin: 3em;
+  color: yellow;
+  font-family: 'Press Start 2P', cursive;
+}
+
+.fadeImage {
+  -webkit-animation: fadein 4s; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 4s; /* Firefox < 16 */
+      -ms-animation: fadein 4s; /* Internet Explorer */
+       -o-animation: fadein 4s; /* Opera < 12.1 */
+          animation: fadein 4s;
+  display: block;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+.you-did-it{
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  height: 45vh;
+}
+
+.you-did-it img {
+  position: absolute;
+}
+
+img#did-it-1 {
+  top: 3em;
+  right: 3em;
+}
+
+img#did-it-2 {
+  bottom: 0;
+  left: 3em;
+}
