--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -53,6 +53,7 @@
     </div>
 
     <!-- MAIN TERMINAL -->
+    <span id="help-text-bar"><p id="help-text">(you can always run `help` to display available commands)</p></span>
     <div id="terminal"></div>
 
   </div>
