resize for mobile

--- a/static/templates/about.html
+++ b/static/templates/about.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>{{name}}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- stylesheets -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.9.0/css/xterm.css" integrity="sha256-QIY4PCy8QFMjISW7DEmeaROMHswpbJfnbLPUH3/GHxw=" crossorigin="anonymous">
   <link rel="stylesheet" href="/assets/css/main.css"/>
