--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>{{name}}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
