--- a/static/css/main.css
+++ b/static/css/main.css
@@ -62,6 +62,24 @@ html, body {
   font-size: 12px;
 }
 
+@media (max-width: 500px) {
+  #about p {
+    font-size: 20px !important;
+  }
+
+  .flex-container {
+    max-height: auto !important;
+  }
+
+  .visible {
+    display: block !important;
+  }
+
+  img {
+    object-fit: contain !important;
+  }
+}
+
 #about h1 {
   margin: 1em;
 }
