--- a/static/css/main.css
+++ b/static/css/main.css
@@ -63,8 +63,13 @@ html, body {
 }
 
 @media (max-width: 500px) {
+  * {
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
+  }
+
   #about p {
-    font-size: 20px !important;
+    font-size: 18px !important;
   }
 
   .flex-container {
