--- a/static/templates/error.html
+++ b/static/templates/error.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html class="error-page">
 <head>
   <meta charset="utf-8" />
   <title>{{error}}</title>
+  <link rel="stylesheet" href="/assets/css/main.css"/>
 </head>
-<body>
-  <h1>something went wrong here...</h1>
+<body class="fadeImage" id="error-page">
+  <h1>something has gone terribly wrong here...</h1>
   <h1>{{status_code}} {{error}}</h1>
 </body>
 </html>
