add slugfile for excluding a few static files, start work on dockerizing app

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -91,6 +91,10 @@ html, body {
     max-height: auto !important;
   }
 
+  .flex-container img {
+    object-fit: contain !important;
+  }
+
   .visible {
     display: block !important;
   }
