why have a devtools mobile renderer at all

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -92,7 +92,7 @@ html, body {
   }
 
   .flex-container img {
-    object-fit: contain !important;
+    object-fit: cover !important;
   }
 
   .visible {
