hide about img on mobile for now

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -92,8 +92,7 @@ html, body {
   }
 
   .flex-container img {
-    width: 200px !important;
-    height: auto !important;
+    display: none !important;
   }
 
   .visible {
