animation on treasure page

--- a/static/templates/treasure.html
+++ b/static/templates/treasure.html
@@ -11,6 +11,17 @@
 <body>
   <div id="treasure" class="treasure-chest fadeImage">
     <h2>* wild applause *</h2>
+    <div class="applause-animation">
+      <ul class="applause-animation">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
     <small><a href="/">go home</a></small>
     <div class="you-did-it">
       <img id="did-it-1" src="/assets/images/you_did_it.gif">
