--- a/static/css/main.css
+++ b/static/css/main.css
@@ -215,11 +215,25 @@ img#did-it-2 {
   background-color: #ff00a0;
   opacity: 0.75;
   margin-right: 5em;
+  animation:spin 20s linear infinite;
+  border-radius: 50%;
+  box-shadow:
+      inset 0 0 50px #fff,
+      inset 20px 0 60px violet,
+      inset -20px 0 60px blue,
+      inset 20px 0 300px violet,
+      inset -20px 0 300px blue,
+        0 0 50px #fff,
+        -10px 0 60px violet,
+        10px 0 60px blue;
 }
+
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
 #treasure-content {
   font-size: 14px;
   margin: 5em;
+  text-align: center;
 }
 
 small a {
