--- a/static/templates/treasure.html
+++ b/static/templates/treasure.html
@@ -10,17 +10,19 @@
 </head>
 <body>
   <div id="treasure" class="treasure-chest fadeImage">
-    <h2>* wild applause *</h2>
-    <div class="applause-animation">
-      <ul class="applause-animation">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+    <div id="treasure-msg">
+      <h2>* wild applause *</h2>
+      <div class="applause-animation">
+        <ul class="applause-animation">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
     </div>
     <small><a href="/">go home</a></small>
     <div class="you-did-it">
@@ -29,13 +31,13 @@
     <div id="treasure-content-container">
       <div id="treasure-content">
         <h1>nicely done &#128526;</h1>
-        <a target="_blank" href="https://github.com/kathleenfrench/portfolio">check out the codebase for this on github &#128064;</a>
         <p>~ thanks for playing ~</p>
       </div>
     </div>
     <div class="you-did-it">
       <img id="did-it-2" src="/assets/images/you_did_it_2.gif">
     </div>
+    <small id="treasure-github-link"><a target="_blank" href="https://github.com/kathleenfrench/portfolio">check out the codebase on github &#128064;</a></small>
   </div>
   <script src="/assets/js/treasure.js"></script>
 </body>
