--- a/static/css/main.css
+++ b/static/css/main.css
@@ -146,9 +146,12 @@ img {
   background-position-y: bottom;
 }
 
-.treasure-chest h2 {
+#treasure-msg {
   float: left;
   margin: 3em;
+}
+
+.treasure-chest h2 {
   color: yellow;
   font-family: 'Press Start 2P', cursive;
 }
@@ -199,31 +202,65 @@ img {
 }
 
 img#did-it-1 {
-  top: 3em;
-  right: 3em;
+  top: 1em;
+  right: 1em;
+  clip-path: circle(30% at center);
 }
 
 img#did-it-2 {
   bottom: 0;
-  left: 3em;
+  left: 5em;
+  clip-path: circle(50% at center);
 }
 
 #treasure-content-container {
-  float: right;
-  height: 45vh;
-  width: 55vw;
+  position: fixed;
+  height: 40vw;
+  width: 40vw;
   background-color: #ff00a0;
   opacity: 0.75;
-  margin-right: 5em;
+  margin-left: 30vw;
+  bottom: 20vh;
+  animation:spin 20s linear infinite;
+  border-radius: 50%;
+  box-shadow:
+      inset 0 0 50px #fff,
+      inset 20px 0 60px violet,
+      inset -20px 0 60px blue,
+      inset 20px 0 300px violet,
+      inset -20px 0 300px blue,
+        0 0 50px #fff,
+        -10px 0 60px violet,
+        10px 0 60px blue;
 }
+
+@media (max-width: 375px) {
+  #treasure-content-container {
+    bottom: 50vh !important;
+  }
+}
+
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
 #treasure-content {
   font-size: 14px;
   margin: 5em;
+  text-align: center;
+}
+
+@media (min-width: 500px) {
+  #treasure-content {
+    margin: 10em !important;
+  }
 }
 
 small a {
   color: aqua;
+}
+
+#treasure-github-link {
+  float: right;
+  margin-right: 5vw;
 }
 
 span#help-text-bar {
@@ -237,4 +274,74 @@ span#help-text-bar {
 p#help-text {
   color: white;
   font-size: 8px;
+}
+
+ul.applause-animation {
+  position: relative;
+  transform:translate(-50%,-50%);
+  margin: 1em 0 0 12em;
+  padding:0;
+  display:flex;
+}
+
+ul.applause-animation li {
+  list-style:none;
+  width:40px;
+  height:40px;
+  background:#fff;
+  border-radius:50%;
+  animation:grow 1.6s ease-in-out infinite;
+}
+
+@keyframes grow
+{
+  0% , 40% , 100%
+  {
+    transform:scale(0.2);
+  }
+  20%{
+     transform:scale(1);
+  }
+}
+
+ul.applause-animation li:nth-child(1){
+  animation-delay:-1.4s;
+  background:#ffff00;
+  box-shadow:0 0 50px #ffff00;
+}
+
+ul.applause-animation li:nth-child(2){
+  animation-delay:-1.2s;
+  background:#76ff03;
+  box-shadow:0 0 50px #76ff03;
+}
+
+ul.applause-animation li:nth-child(3){
+  animation-delay:-1s;
+  background:#f06292;
+  box-shadow:0 0 50px #f06292;
+}
+
+ul.applause-animation li:nth-child(4){
+  animation-delay:-0.8s;
+  background:#4fc3f7;
+  box-shadow:0 0 50px #4fc3f7;
+}
+
+ul.applause-animation li:nth-child(5){
+  animation-delay:-0.6s;
+  background:#ba68c8;
+  box-shadow:0 0 50px #ba68c8;
+}
+
+ul.applause-animation li:nth-child(6){
+  animation-delay:-0.4s;
+  background:#f57c00;
+  box-shadow:0 0 50px #f57c00;
+}
+
+ul.applause-animation li:nth-child(7){
+  animation-delay:-0.2s;
+  background:#673ab7;
+  box-shadow:0 0 50px #673ab7;
 }
