--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -43,7 +43,7 @@
       </div>
       <div class="flex-container">
         <p> 
-          kathleen french is a writer and software engineer @ vimeo living in brooklyn. she received her b.a. in english from harvard and her m.f.a. in fiction from nyu. she has a boston terrier named george.
+          kathleen french is a writer and software engineer @ vimeo living in brooklyn. she received her b.a. in english from harvard and her m.f.a. in fiction from nyu. she has a boston terrier named george and a very tall mix named henry.
         </p>
       </div>
       <div class="flex-container">
