--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -43,7 +43,7 @@
       </div>
       <div class="flex-container">
         <p> 
-          kathleen french is a writer and principal software engineer @ vimeo living in brooklyn. she received her b.a. in english from harvard and her m.f.a. in fiction from nyu. she has a boston terrier named george and a very tall mix named henry.
+          kathleen french is a writer and staff software engineer @ domino data lab living in brooklyn. she received her b.a. in english from harvard and her m.f.a. in fiction from nyu. she has a very tall boxer mix named henry and the memory of her beloved boston terrier, george. he will be loved, cherished, and missed always.
         </p>
       </div>
       <div class="flex-container">
